Issue #SB-2651 fix: Keyboard overlaping issue fixed

--- a/src/component/content-rating-alert/content-rating-alert.scss
+++ b/src/component/content-rating-alert/content-rating-alert.scss
@@ -64,6 +64,7 @@ content-rating-alert {
     overflow-y: hidden;
   }
 
-
-
-
+.content-rating-alert ion-backdrop {
+    background-color: map-get($colors, dark) !important;
+    opacity: 0.4 !important;
+}
